Fix name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "swrpgtools-stats",
+  "name": "theouterrim",
   "version": "0.0.1",
   "dependencies": {
     "@material-ui/core": "^4.9.3",
