Add Starships and Speeders book

--- a/src/data/books.yaml
+++ b/src/data/books.yaml
@@ -254,3 +254,8 @@
   key: uSWR17
   initials: GaG
   generatedId: 67d047a4-baf2-43ca-8ece-8d317280810e
+- name: Starships and Speeders
+  system: Star Wars Roleplaying
+  key: SWR18
+  initials: SaS
+  generatedId: f9e6872c-3d87-4fc8-8d24-91763eeeb397
